--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,5 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749711.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2018/11/1b4b324423b9f47e62cff9d9046e359a-320x200.jpg">【新闻看点】美中经济两重天 川普：与习签协议</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749624.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2019/12/1912240929222478-320x200.jpg">香港圣诞催泪弹肆虐 检测报告揭政府谎言</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11744649.md#1">英预言家：2020年中国发生革命 川普连任</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743411.md#1">中共尽失人心 反习势力与保习派激战</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/21/n11736488.md#1">客机降香港遭拒 传中共军机拦截要求远离澳门</a><br>
@@ -30,11 +30,11 @@
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/6/n11706071.md#1">大陆前体操冠军张尚武生活无着 因偷窃入狱</a><br>
 <br><p><a href="https://github.com/sloxqr240/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749909.md#1">恐金融风险 中共2年任命12金融副省长??</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749146.md#1">“香港警暴展”全球接力 台中连侬墙全台首展</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11750017.md#1">中共自制航母穿越台海 时机敏感</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749930.md#1">3万元鹤岗买房 学者：产业不振 人口外流</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749928.md#1">反渗透法争议 陆委会指宋楚瑜不了解法案</a><br>
-<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749624.md#1">香港圣诞催泪弹肆虐 检测报告揭政府谎言</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749889.md#1">一中国留学生因杀人在日本被处以绞刑</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749281.md#1">【珍言真语】徐家健：打压黄色经济圈适得其反</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749651.md#1">【2019盘点】中共社会监控的极端化</a><br>
